[project]
name = "picguessr"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = [
    "httpx[socks]>=0.27.0",
    "pytelegrambotapi>=4.16.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
'_'.env_file = ".env"
start = "python app.py"
